--- a/OUTROS/1 - Copia.html
+++ b/OUTROS/1 - Copia.html
@@ -225,15 +225,15 @@ ONLINE
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
-index-MENUI/#.html
+BUSCA CÓDIGOS HTML/BUSCA CÓDIGOS HTML.html
 " target="_blank"><h2>
-NOME
+BUSCA CÓDIGOS HTML
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6 pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/MENU-E-CATEGORIAS/
 " target="_blank"><h2>
-NOME
+MENU-E-CATEGORIAS (OTIMO)
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
