--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {
 <a href="VIDEOS/1 - Copia.html">VIDEOS</a>
 <a href="PORNO/1 - Copia.html">PORNO</a>
 <a href="TV/1 - Copia.html">TV</a>
-<a href="OUTROS/1 - Copia.html">OUTROS</a>
+<a href="OUTROS/1 - Copia.html">🔐OUTROS🔐</a>
 
 </div>
 <button class="openbtn" onclick="openNav()"><b>☰</b> CATEGORIAS</button>  
