--- a/OUTROS/1 - Copia.html
+++ b/OUTROS/1 - Copia.html
@@ -237,9 +237,9 @@ MENU-E-CATEGORIAS (OTIMO)
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/BUSCA-TUDOMISTURADO/
 " target="_blank"><h2>
-NOME
+BUSCA-TUDOMISTURADO
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
