--- a/OUTROS/1 - Copia.html
+++ b/OUTROS/1 - Copia.html
@@ -249,9 +249,9 @@ LINKS-HTML
 </h2></a><h3 class="text-right">LINKS-HTML</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6 pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/FILMESSANTOS/
 " target="_blank"><h2>
-NOME
+FILMESSANTOS
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
@@ -261,9 +261,9 @@ NOME
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6 pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/000000-FILMESSANTOS-/
 " target="_blank"><h2>
-NOME
+000000-FILMESSANTOS-(INICIO TUDO)
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
