--- a/OUTROS/1 - Copia.html
+++ b/OUTROS/1 - Copia.html
@@ -272,17 +272,10 @@ https://santos246.github.io/-FILMESSANTOS-/
 -FILMESSANTOS-
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
-
-
-
-
-
-
-<!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/ALBUM-EM-GERAL/
 " target="_blank"><h2>
-NOME
+ALBUM-EM-GERAL
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6 pt-3"><a href="
