Update 1 - Copia.html

--- a/OUTROS/1 - Copia.html
+++ b/OUTROS/1 - Copia.html
@@ -279,9 +279,9 @@ ALBUM-EM-GERAL
 </h2></a><h3 class="text-right">Video 02</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6 pt-3"><a href="
-index-MENUI/#.html
+https://santos246.github.io/NOVOMUNDO/
 " target="_blank"><h2>
-NOME
+NOVOMUNDO
 </h2></a><h3>Video 01</h3></div>
 <!-------------------------------------------------------------------------------------------->
 <div class="col-sm-6  pt-3"><a href="
